--- a/01 Einfache Texte/index.html
+++ b/01 Einfache Texte/index.html
@@ -6,7 +6,7 @@
     <title>Titel</title>
   </head>
   <body>
-      <p>Formatiere folgenden Text, so dass er korrekt in einer HTML-Seite angezeigt wird. Wähle für den den Titel eine geeignete Überschrift. Füge am Ende der Ballade einen Link auf die Quelle ein, das ist der Wikipedia-Artikel zum Zauberlehrling.</p>
+      <p>Formatiere folgenden Text, so dass er korrekt in einer HTML-Seite angezeigt wird. Wähle für den den Titel eine geeignete Überschrift. Füge am Ende der Ballade einen Link auf die Quelle ein, das ist der Wikipedia-Artikel zum Zauberlehrling. Ändere den <tt>title</tt>-Tag, so dass der korrekte Titel der Ballade auf dem Tag im Browser angezeigt wird.</p>
       
 Der Zauberlehrling
       
