--- a/01 Einfache Texte/index.html
+++ b/01 Einfache Texte/index.html
@@ -6,7 +6,13 @@
     <title>Titel</title>
   </head>
   <body>
-      <p>Formatiere folgenden Text, so dass er korrekt in einer HTML-Seite angezeigt wird. Wähle für den den Titel eine geeignete Überschrift. Füge am Ende der Ballade einen Link auf die Quelle ein, das ist der Wikipedia-Artikel zum Zauberlehrling. Ändere den <tt>title</tt>-Tag, so dass der korrekte Titel der Ballade auf dem Tag im Browser angezeigt wird.</p>
+      <p>Formatiere folgenden Text, so dass er korrekt in einer HTML-Seite angezeigt wird.</p>
+      <ol>
+      <li>Wähle für den den Titel eine geeignete Überschrift.</li>
+      <li>Verlinke den Autornamen mit einer E-Mail-Adresse (goethe@weimarer-klassik.org).</li>
+      <li>Füge am Ende der Ballade einen Link auf die Quelle ein, das ist der Wikipedia-Artikel zum Zauberlehrling.</li>
+      <li>Ändere den <tt>title</tt>-Tag, so dass der korrekte Titel der Ballade auf dem Tag im Browser angezeigt wird.</li>
+      </ol>
       
 Der Zauberlehrling
       
