--- a/01 Einfache Texte/index.html
+++ b/01 Einfache Texte/index.html
@@ -11,7 +11,7 @@
       <li>Wähle für den den Titel eine geeignete Überschrift.</li>
       <li>Verlinke den Autornamen mit einer E-Mail-Adresse (goethe@weimarer-klassik.org).</li>
       <li>Füge am Ende der Ballade einen Link auf die Quelle ein, das ist der Wikipedia-Artikel zum Zauberlehrling.</li>
-      <li>Ändere den <tt>title</tt>-Tag, so dass der korrekte Titel der Ballade auf dem Tag im Browser angezeigt wird.</li>
+      <li>Ändere den <tt>title</tt>-Tag, so dass der korrekte Titel der Ballade im Tab des Browsers angezeigt wird.</li>
       </ol>
       
 Der Zauberlehrling
