--- a/HTML-Grundlagen.html
+++ b/HTML-Grundlagen.html
@@ -309,6 +309,6 @@
       
       <p>Mit dem <tt>&lt;hr&gt;</tt>-Tag kann man eine <strong>horizontale Linie</strong> auf einer Seite einfügen. Das Element hat kein schließendes Element.</p>
       
-      <p>Der Browser ordnet die Zeilen nach eigenem Gutdünken an. Möchte man verhindern, dass ein Text an einem Leerzeichen in einer Zeile umgebrochen wird, kann man ein sogenanntes <strong>geschütztes Leerzeichen</strong> verwenden und ersetzt hierzu ein Leerzeichen durch <tt>&nbsp;</tt>.</p>
+      <p>Der Browser ordnet die Zeilen nach eigenem Gutdünken an. Möchte man verhindern, dass ein Text an einem Leerzeichen in einer Zeile umgebrochen wird, kann man ein sogenanntes <strong>geschütztes Leerzeichen</strong> verwenden und ersetzt hierzu ein Leerzeichen durch <tt>&amp;nbsp;</tt>.</p>
   </body>
 </html>
